# Schola

./: .gitattributes  .gitignore  CITATION.cff  README.md  Schola.uplugin  pyrightconfig.json  pytest.ini
Config/: DefaultSchola.ini
Content/: EmptyTestMap.umap
Docs/Blogs/announcing_schola_v2_1/: announcing_schola_v2_1.md
Docs/Blogs/behaviour_cloning/: behaviour_cloning.md
Docs/Blogs/distributed_training_k8s/: distributed_training_k8s.md
Docs/Blogs/statetree_rl/: statetree_rl.md
Docs/Doxygen/: Doxyfile
Docs/Release Notes/: v2_1_0.md
Docs/Sphinx/: Makefile  conf.py  index.rst
Docs/Sphinx/API/: api_toc.rst  index.rst
Docs/Sphinx/_ext/: blueprint.py  localref.py
Docs/Sphinx/examples/: example_one.rst  example_three.rst  example_two.rst  examples_toc.rst  index.rst  state_tree_rl.rst  tag.rst
Docs/Sphinx/guides/: choosing_an_environment_type.rst  cli_dataclass_conventions.rst  distributed_training.rst  extending_launch.rst  guides_toc.rst  index.rst  migrating_to_v2.rst  running_from_cli.rst  running_schola.rst  setting_up_inference.rst  setup_distributed_training.rst  setup_examples.rst  setup_schola.rst  testing_with_pytest.rst  tips_and_tricks.rst
Proto/: Definitions.proto  GymConnector.proto  Points.proto  Spaces.proto  State.proto  StateUpdates.proto
Resources/python/: LICENSE.txt  README.md  pyproject.toml  setup.py
Resources/python/schola/: __init__.py
Resources/python/schola/core/: __init__.py  env.py  error_manager.py  model.py  unreal_connections.py  utils.py
Resources/python/schola/core/protocols/: __init__.py  async_base_protocol.py  base_protocol.py  socket_protocol.py
Resources/python/schola/core/protocols/protobuf/: __init__.py  async_grpc_protocol.py  deserialize.py  grpc_protocol.py  offline_grpc_protocol.py  serialize.py
Resources/python/schola/core/simulators/: __init__.py  base_simulator.py  external_simulator.py
Resources/python/schola/core/simulators/unreal/: __init__.py  base_simulator.py  editor_simulator.py  executable_simulator.py  project_simulator.py
Resources/python/schola/core/spaces/: base.py  box.py  discrete.py
Resources/python/schola/core/utils/: dict_helpers.py  id_manager.py  plugins.py  ubt.py
Resources/python/schola/gym/: __init__.py  env.py  utils.py
Resources/python/schola/minari/: __init__.py  datacollector.py
Resources/python/schola/ray/: env.py  utils.py
Resources/python/schola/rllib/: __init__.py  env.py  env_runner.py  export.py  utils.py
Resources/python/schola/sb3/: __init__.py  action_space_patch.py  async_env.py  env.py  export.py  utils.py
Resources/python/schola/scripts/: __init__.py  common.py  launch.py
Resources/python/schola/scripts/common/: command_template.py  panel.py  settings.py
Resources/python/schola/scripts/minari/: __init__.py  collect.py  settings.py
Resources/python/schola/scripts/ray/: __init__.py  launch.py  rllib_to_onnx.py  settings.py
Resources/python/schola/scripts/rllib/: __init__.py  rllib_to_onnx.py  settings.py  train.py
Resources/python/schola/scripts/rllib/eval/: __init__.py  eval.py  settings.py
Resources/python/schola/scripts/rllib/train/: __init__.py  settings.py  train.py
Resources/python/schola/scripts/sb3/: __init__.py  launch.py  sb3_to_onnx.py  settings.py  utils.py
Resources/python/schola/scripts/sb3/eval/: __init__.py  eval.py  settings.py
Resources/python/schola/scripts/sb3/train/: __init__.py  settings.py  train.py
Resources/python/schola/scripts/utils/: __init__.py  build_docs.py  build_plugin.py  compile_proto.py
Source/: conftest.py  opencppcoverage.py  unreal_test_classes.py
Source/Schola/: Schola.Build.cs
Source/Schola/Public/: Schola.h
Source/ScholaEditor/: ScholaEditor.Build.cs
Source/ScholaImitation/: ScholaImitation.Build.cs
Source/ScholaInferenceUtils/: ScholaInferenceUtils.Build.cs
Source/ScholaInteractors/: ScholaInteractors.Build.cs
Source/ScholaNNE/: ScholaNNE.Build.cs
Source/ScholaProtobuf/: ScholaProtobuf.Build.cs
Source/ScholaStateTree/: ScholaStateTree.Build.cs
Source/ScholaTraining/: ScholaTraining.Build.cs
Test/: __init__.py  conftest.py  test_build.py  test_core.py  test_rllib.py  test_sb3.py  testing_spaces.py
Test/core/: __init__.py  test_error_manager.py  test_id_manager.py  test_plugins.py  test_protocols_base.py  test_ubt.py
Test/envs/: __init__.py  gym_server.py  imitation_server.py  pettingzoo_server.py
Test/gym/: conftest.py  test_gym.py  test_utils.py  test_vec_env.py  test_vec_env_autoreset.py  testing_env.py  vec_utils.py
Test/imitation/: test_minari.py
Test/minari/: __init__.py  conftest.py  test_datacollector.py  test_imitation_protocol.py
Test/rllib/: __init__.py  conftest.py  test_export_to_onnx.py  test_external_simulator.py  test_hierarchical_rl.py  test_rllib.py  test_rllib_dynamic.py  test_rllib_multiagent.py  test_rllib_vec.py  test_rllib_vec_multiagent.py  test_train_cli.py
Test/sb3/: __init__.py  envs.py  test_async_env.py  test_env.py  test_export_to_onnx.py  test_sb3_utils.py
Test/scripts/: __init__.py  test_command_template.py
docker/: cluster-config-networked.yml  cluster-config.yml
docker/cluster-sim/: Dockerfile  head_entrypoint.sh  head_networked_entrypoint.sh  learner_entrypoint.sh  mock_ue_server.py  train_driver.py  train_driver_networked.py  worker_entrypoint.sh  worker_networked_entrypoint.sh
(+476 files in other folders)
