# Copyright (c) 2023-2025 Advanced Micro Devices, Inc. All Rights Reserved.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schola"
version = "2.1.0"
description = "Schola is a toolkit/plugin for Unreal Engine that facilitates training agents using reinforcement learning frameworks."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10, <3.13"

authors = [
    {name = "Alexander Cann", email = "alexcann@amd.com"},
    {name = "Tian Yue Liu", email = "TianYue.Liu@amd.com"},
    {name = "Nathan Hung", email = "Nathan.Hung@amd.com"},
    {name = "Noah Monti", email = "Noah.Monti@amd.com"},
    {name = "Mehdi Saeedi", email = "Mehdi.Saeedi@amd.com"},
]

keywords = [
    "reinforcement-learning",
    "unreal-engine",
    "machine-learning",
    "deep-learning",
    "gymnasium",
    "rllib",
    "stable-baselines3",
    "ai",
    "game-development",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Simulation",
    "Operating System :: OS Independent",
]

dependencies = [
    "protobuf>=6.31.1,<7", # protoc 31.1 maps to the Python 6.31.1 runtime line
    "grpcio>=1.80.0,<2",
    "onnx>=1.18",
    "onnxscript>=0.6.2", # 0.6.2 is the earliest version of onnxscript that works with LSTMs
    "gymnasium>=1.1.0",
    "backports.strenum; python_version<'3.11'",
    "cyclopts>=4.0",
    "torch>=2.10", # 2.10 is the earliest version for which exporting models to ONNX with Dynamo works well
]

[project.urls]
Homepage = "https://gpuopen.com/amd-schola/"
Repository = "https://github.com/GPUOpen-LibrariesAndSDKs/Schola"

[project.optional-dependencies]
# Dependencies for running training with Stable Baselines 3.
# * stable-baselines3 is required to run training with Stable Baselines 3.
# * tqdm and rich are required to display the training progress bar from Stable Baselines 3.
sb3 = [
    "stable-baselines3>=2.6",
    "tqdm",
    "rich",
]

# Dependencies for running training with RLlib.
# * ray[rllib] is required to run training with RLlib.
# * ray[rllib]>=2.49 is the earliest version of RLlib supporting Gymnasium>=1.1.0, and 2.54 is the latest available version.
rllib = [
    "ray[rllib]>=2.49, <2.56",
]

# Dependencies for collecting Minari datasets with Schola.
# * minari[hdf5] is required to collect Minari datasets with Schola. 0.5.2 is required for MultiBinary and MultiDiscrete spaces.
minari = [
    "minari[hdf5,create]>=0.5.2",
]

# All dependencies (sb3, rllib, minari)
all = [
    "stable-baselines3>=2.6",
    "tqdm",
    "rich",
    "ray[rllib]>=2.49, <2.55",
    "minari[hdf5,create]>=0.5.2",
]

[project.scripts]
schola = "schola.scripts.launch:main"

[dependency-groups]
test= [
    "pytest",
    "pytest-timeout",
    "pytest-mock",
    "minigrid",
    "pettingzoo[butterfly]",
    "mpe2",
    "pygame",
    "pymunk",
    "pytest-xdist",
    "onnxruntime",
]

test-metrics = [
    "pytest-cov",
    "pytest-durations"
]

# Dependencies for building documentation with Sphinx.
# * sphinx is required to build the documentation. <9.0 is required to avoid issues with sphinx-tabs. Once those are resolved we can remove this.
# * breathe is required to generate the C++ API documentation.
# * sphinx-book-theme is required to use the book theme for the documentation.
# * sphinx-tabs==3.4.7 is required to create tabs in the documentation.
# * sphinx-copybutton is required to add copy buttons to code blocks.
docs = [
    "sphinx<9.0",
    "breathe",
    "sphinx_book_theme",
    "sphinx-tabs==3.4.7",
    "sphinx-copybutton",
]

[tool.setuptools]
# Package discovery configuration
packages = {find = {}}

# coverage.py configuration
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain about abstract method placeholder code:
    "\\.\\.\\.",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true
skip_empty = true
omit = [
    "**/generated/*",
    # Build/docs/proto helpers and the schola console entrypoint (not exercised by unit tests).
    "**/schola/scripts/utils/*",
    "**/schola/scripts/launch.py",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.run]
patch = ["subprocess"]
branch = true
omit = [
    "**/generated/*",
    "**/schola/scripts/utils/*",
    "**/schola/scripts/launch.py",
]
